--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
     ],
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^6.0 || ^7.0"
+        "symfony/framework-bundle": "^6.0|^7.0"
     }
 }
