Correction du chemin du contrôleur dans routes.yaml

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Controller/
+        path: '@LalamefineAutoadminBundle/src/Controller/'
         namespace: Lalamefine\Autoadmin\Controller
     type: attribute
